src/tests/testsamples/syntax_errors/multiple_target_definitions.sift
targets = [Google: "www.google.com"]
targets = [Amazon: "www.amazon.com"]